# dotfiles

./: .gitignore  .gitmodules  .watsonrc  Justfile  LICENSE.txt  Makefile  README.md  aliases.zsh  bash_aliases  bashrc  codex  config.hs  curlrc  ghci  gitconfig  gitignore  install.sh  jsbeautifyrc  packages.txt  rc.conf  rvmrc  screenrc  slate  slim.conf  tmux.conf  xinitrc  zprofile  zshenv  zshrc
IntelliJ/: .ideavimrc
Terminal/: Nord Standalone.terminal  Nord.terminal  README.md
Terminal.app/: Nord Standalone.terminal  Nord.terminal
arch/: .imwheelrc  aur.txt  bootstrap.sh  packages.txt  pkglist.txt
archived/: xinitrc  xscreensaver
beets/: config.yaml
brew/: Brewfile  Justfile  README.md  setup.sh
brightness/: Cargo.toml  Makefile  README.md 
claude/: statusline.sh
ctags/: .ctags
desktop/: .xbindkeysrc  bootstrap.sh  packages.txt
dig/: .digrc
esphome/: Justfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
esphome/config/: devkit.yaml  feather.yaml
fontawesome/: install.sh
fonts/: README.md  README.txt
gdb/: .gdbinit
git/: .gitconfig  .gitconfig.work  .gitignore  gitconfig
gnome/: Makefile  dconf.config
haskell/: .ghci
i3/: config  i3status.conf
iterm2/: README.md  com.googlecode.iterm2.plist
karabiner/: .gitignore
latex/: .latexmkrc
network.d/: b  ccc  e  f2  home  ih  nsl
nyx/: packages.txt
p10k/: .p10k.zsh
pacman.d/: mirrorlist  mirrorlist.pacsave  mirrorlist.parabola
ranger/: .gitignore  rc.conf  rifle.conf
raycast/: Backup.rayconfig  Justfile  Keys.txt  Raycast 2025-11-25 10.32.26 am.rayconfig  (+5 more)
(+212 files in other folders)
