[project]
authors = [
  {name = "Jaseem Abid", email = "me@jabid.in"},
]
dependencies = [
    "esphome==2025.3.3",
]
description = ""
name = "espconfig"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

# [build-system]
# build-backend = "hatchling.build"
# requires = ["hatchling"]
